Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


TANGOAPI int TANGOCALL LSX_MoveAbs (int lLSID, double dX, double dY, double dZ, double dA, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveRel (int lLSID, double dX, double dY, double dZ, double dA, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveEx (int lLSID, double dX, double dY, double dZ, double dR, BOOL bRelative, BOOL bWait, int lAxisCount);

TANGOAPI int TANGOCALL LSX_Go (int lLSID, double dX, double dY, double dZ, double dA);


TANGOAPI int TANGOCALL LSX_Calibrate (int lLSID);

TANGOAPI int TANGOCALL LSX_RMeasure (int lLSID);


TANGOAPI int TANGOCALL LSX_SetPos (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetVel (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetDelay (int lLSID, int lDelay);

TANGOAPI int TANGOCALL LSX_SetJoystickOn (int lLSID, BOOL bPositionCount, BOOL bEncoder);

TANGOAPI int TANGOCALL LSX_SetJoystickOff (int lLSID);

TANGOAPI int TANGOCALL LSX_SoftwareReset (int lLSID);

TANGOAPI int TANGOCALL LSX_SetHwFactor (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetHwFactorB (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_GetHwFactor (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetHwFactorB (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_StopAxes (int lLSID);

TANGOAPI int TANGOCALL LSX_MoveRelSingleAxis (int lLSID, int lAxis, double dValue, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveAbsSingleAxis (int lLSID, int lAxis, double dValue, BOOL bWait);

TANGOAPI int TANGOCALL LSX_SetVelSingleAxis (int lLSID, int lAxis, double dVel);

TANGOAPI int TANGOCALL LSX_SetAccelSingleAxis (int lLSID, int lAxis, double dAccel);

TANGOAPI int TANGOCALL LSX_CalibrateEx (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_RMeasureEx (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_SetSpeedPoti (int lLSID, BOOL bSpeedPoti);

TANGOAPI int TANGOCALL LSX_MoveRelShort (int lLSID);

TANGOAPI int TANGOCALL LSX_SetJoystickDir (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_SetHandWheelOn (int lLSID, BOOL bPositionCount, BOOL bEncoder);

TANGOAPI int TANGOCALL LSX_SetHandWheelOff (int lLSID);

TANGOAPI int TANGOCALL LSX_SetDistance (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetRMOffset (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_LStepSave (int lLSID);

TANGOAPI int TANGOCALL LSX_SetBPZ (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_SetJoystickWindow (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_WaitForAxisStop (int lLSID, int lAFlags, int lATimeoutValue, BOOL *pbATimeout);

TANGOAPI int TANGOCALL LSX_GetVel (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_SetVelFac (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetVelFac (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetSpeedPoti (int lLSID, BOOL *pbSpePoti);

TANGOAPI int TANGOCALL LSX_GetRMOffset (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetStopPolarity (int lLSID, BOOL bHighActiv);

TANGOAPI int TANGOCALL LSX_GetStopPolarity (int lLSID, BOOL *pbHighActiv);

TANGOAPI int TANGOCALL LSX_SetStopAccel (int lLSID, double dXD, double dYD, double dZD, double dAD);

TANGOAPI int TANGOCALL LSX_GetStopAccel (int lLSID, double *pdXD, double *pdYD, double *pdZD, double *pdAD);

TANGOAPI int TANGOCALL LSX_GetDelay (int lLSID, int *plDelay);

TANGOAPI int TANGOCALL LSX_GetDistance (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_ClearPos (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_SetDigJoySpeed (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetDigJoySpeed (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetJoystickDir (int lLSID, int *plXD, int *plYD, int *plZD, int *plRD);

TANGOAPI int TANGOCALL LSX_GetJoystick (int lLSID, BOOL *pbJoystickOn, BOOL *pbManual, BOOL *pbPositionCount, BOOL *pbEncoder);

TANGOAPI int TANGOCALL LSX_GetJoystickWindow (int lLSID, int *plAValue);

TANGOAPI int TANGOCALL LSX_GetHandWheel (int lLSID, BOOL *pbHandWheelOn, BOOL *pbPositionCount, BOOL *pbEncoder);

TANGOAPI int TANGOCALL LSX_GetBPZ (int lLSID, int *plAValue);

TANGOAPI int TANGOCALL LSX_GetKey (int lLSID, BOOL *pbKey1, BOOL *pbKey2, BOOL *pbKey3, BOOL *pbKey4);

TANGOAPI int TANGOCALL LSX_GetKeyLatch (int lLSID, BOOL *pbKey1, BOOL *pbKey2, BOOL *pbKey3, BOOL *pbKey4);

TANGOAPI int TANGOCALL LSX_ClearKeyLatch (int lLSID, int lKey);

TANGOAPI int TANGOCALL LSX_SetZwTravel (int lLSID, int lIndex, double dDistance);

TANGOAPI int TANGOCALL LSX_GetZwTravel (int lLSID, int lIndex, double *pdDistance);