Tango/DLL Examples/Java/Tango_Example/src/components/TANGODLL.java


    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetRMOffset (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetRMOffset (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pbSpePoti
     * @return
     */
    public int LSX_GetSpeedPoti (int lLSID, IntByReference pbSpePoti);

    /**
     *
     * @param lLSID
     * @param bSpeedPoti
     * @return
     */
    public int LSX_SetSpeedPoti (int lLSID, boolean bSpeedPoti);

    /**
     *
     * @param lLSID
     * @param pdXD
     * @param pdYD
     * @param pdZD
     * @param pdAD
     * @return
     */
    public int LSX_GetStopAccel (int lLSID, DoubleByReference pdXD, DoubleByReference pdYD, DoubleByReference pdZD, DoubleByReference pdAD);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetStopAccel (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pbHighActiv
     * @return
     */
    public int LSX_GetStopPolarity (int lLSID, IntByReference pbHighActiv);

    /**
     *
     * @param lLSID
     * @param bHighActiv
     * @return
     */
    public int LSX_SetStopPolarity (int lLSID, boolean bHighActiv);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetVel (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetVel (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetVelFac (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetVelFac (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_LStepSave (int lLSID);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param dAccel
     * @return
     */
    public int LSX_SetAccelSingleAxis (int lLSID, int lAxis, double dAccel);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param dVel
     * @return
     */
    public int LSX_SetVelSingleAxis (int lLSID, int lAxis, double dVel);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_SoftwareReset (int lLSID);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_Calibrate (int lLSID);

    /**
     *
     * @param lLSID
     * @param lFlags
     * @return
     */
    public int LSX_CalibrateEx (int lLSID, int lFlags);

    /**
     *
     * @param lLSID
     * @param lFlags
     * @return
     */
    public int LSX_ClearPos (int lLSID, int lFlags);

    /**
     *
     * @param lLSID
     * @param plDelay
     * @return
     */
    public int LSX_GetDelay (int lLSID, IntByReference plDelay);

    /**
     *
     * @param lLSID
     * @param lDelay
     * @return
     */
    public int LSX_SetDelay (int lLSID, int lDelay);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetDistance (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetDistance (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @param bWait
     * @return
     */
    public int LSX_MoveAbs (int lLSID, double dX, double dY, double dZ, double dA, boolean bWait);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_Go (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param dValue
     * @param bWait
     * @return
     */
    public int LSX_MoveAbsSingleAxis (int lLSID, int lAxis, double dValue, boolean bWait);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @param bRelative
     * @param bWait
     * @param lAxisCount
     * @return
     */
    public int LSX_MoveEx (int lLSID, double dX, double dY, double dZ, double dA, boolean bRelative, boolean bWait, int lAxisCount);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @param bWait
     * @return
     */
    public int LSX_MoveRel (int lLSID,double dX,double dY,double dZ,double dA,boolean bWait);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_MoveRelShort (int lLSID);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param dValue
     * @param bWait
     * @return
     */
    public int LSX_MoveRelSingleAxis (int lLSID, int lAxis, double dValue, boolean bWait);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_RMeasure (int lLSID);

    /**
     *
     * @param lLSID
     * @param IFlags
     * @return
     */
    public int LSX_RMeasureEx (int lLSID, int IFlags);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetPos (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_StopAxes (int lLSID);

    /**
     *
     * @param lLSID
     * @param lAFlags
     * @param lATimeoutValue
     * @param pbATimeout
     * @return
     */
    public int LSX_WaitForAxisStop (int lLSID, int lAFlags, int lATimeoutValue, IntByReference pbATimeout);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetDigJoySpeed (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetDigJoySpeed (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pbHandWheelOn
     * @param pbPositionCount
     * @param pbEncoder
     * @return
     */
    public int LSX_GetHandWheel (int lLSID, IntByReference pbHandWheelOn, IntByReference pbPositionCount, IntByReference pbEncoder);

    /**
     *
     * @param lLSID
     * @param pbJoystickOn
     * @param pbManual
     * @param pbPositionCount
     * @param pbEncoder
     * @return
     */
    public int LSX_GetJoystick (int lLSID, IntByReference pbJoystickOn, IntByReference pbManual, IntByReference pbPositionCount, IntByReference pbEncoder);

    /**
     *
     * @param lLSID
     * @param plXD
     * @param plYD
     * @param plZD
     * @param plAD
     * @return
     */
    public int LSX_GetJoystickDir (int lLSID, IntByReference plXD, IntByReference plYD, IntByReference plZD, IntByReference plAD);

    /**
     *
     * @param lLSID
     * @param lXD
     * @param lYD
     * @param lZD
     * @param lAD
     * @return
     */
    public int LSX_SetJoystickDir (int lLSID, int lXD, int lYD, int lZD, int lAD);

    /**
     *
     * @param lLSID
     * @param plAValue
     * @return
     */
    public int LSX_GetJoystickWindow (int lLSID, IntByReference plAValue);

    /**
     *
     * @param lLSID
     * @param lAValue
     * @return
     */
    public int LSX_SetJoystickWindow (int lLSID, int lAValue);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_SetHandWheelOff (int lLSID);

    /**
     *
     * @param lLSID
     * @param bPositionCount
     * @param bEncoder
     * @return
     */
    public int LSX_SetHandWheelOn (int lLSID, boolean bPositionCount, boolean bEncoder);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_SetJoystickOff (int lLSID);

    /**
     *
     * @param lLSID
     * @param bPositionCount
     * @param bEncoder
     * @return
     */
    public int LSX_SetJoystickOn (int lLSID, boolean bPositionCount, boolean bEncoder);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetHwFactor (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetHwFactor (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetHwFactorB (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetHwFactorB (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @param pdDistance
     * @return
     */
    public int LSX_GetZwTravel (int lLSID, int lIndex, DoubleByReference pdDistance);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @param dDistance
     * @return
     */
    public int LSX_SetZwTravel (int lLSID, int lIndex, double dDistance);

    /**
     *
     * @param lLSID
     * @param pbKey1
     * @param pbKey2
     * @param pbKey3
     * @param pbKey4
     * @return
     */
    public int LSX_GetKey (int lLSID, IntByReference pbKey1, IntByReference pbKey2, IntByReference pbKey3, IntByReference pbKey4);

    /**
     *
     * @param lLSID
     * @param pbKey1
     * @param pbKey2
     * @param pbKey3
     * @param pbKey4
     * @return
     */
    public int LSX_GetKeyLatch (int lLSID, IntByReference pbKey1, IntByReference pbKey2, IntByReference pbKey3, IntByReference pbKey4);

    /**
     *
     * @param lLSID
     * @param lKey
     * @return
     */
    public int LSX_ClearKeyLatch (int lLSID, int lKey);

    /**
     *
     * @param lLSID
     * @param plAValue
     * @return
     */
    public int LSX_GetBPZ (int lLSID, IntByReference plAValue);

    /**
     *
     * @param lLSID
     * @param lAValue
     * @return
     */
    public int LSX_SetBPZ (int lLSID, int lAValue);
